--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ flutter:
     - assets/images/
     - assets/images/singleton/
     - assets/images/factory_method/
+    - assets/images/abstract_factory/
   fonts:
     - family: Roboto
       fonts:
